Fix for Android's Chrome and Record form inside Wrapper
Hopefully fixed issue with Google Chrome on Android and
Soundboard+Festify wrapper: tapping on 3rd input field after filling in
the 2nd caused the whole Soundboard iframe to disappear (while tapping
on the 3rd BEFORE the 2nd didn't cause any trouble).
Fix based on:
http://matthewjamestaylor.com/blog/perfect-2-column-double-page.htm

--- a/httpdocs/soundboard+getfestify.com-wrapper.htm
+++ b/httpdocs/soundboard+getfestify.com-wrapper.htm
@@ -15,7 +15,7 @@
 			-webkit-box-sizing: border-box;
 			border: none;
 		}
-		
+	
 		body {
 			width: 200%;
 			background: #1c1f24;
@@ -27,19 +27,32 @@
 
 		iframe {
 			width: 50%;
+			position: relative;
+			left: 50%;
 			float: left;
+			overflow: hidden;
 		}
-
-		#scroll-wrapper {
-			/* overflow-y: auto; fucks up old Android browser */
-			-webkit-overflow-scrolling: touch;
+		
+		#wrapper {
+			float: left;
+			overflow: hidden;
+			/* overflow-y: auto; not OK on Android 2.x browser
+			-webkit-overflow-scrolling: touch; */
+		}
+		
+		#left {
+			position: relative;
+			right: 50%;
+			float: left;
 		}
 	</style>
 </head>
-<body onload="if (window.innerWidth < 850) alert('Schuif naar rechts voor de playlist.');">
-	<!--<div id="scroll-wrapper"><!--For iPhone-->
-	<iframe src="soundboard.php"><a href="soundboard.php">Open Soundboard</a></iframe>
-	<iframe src="http://festify.us"><a href="http://festify.us">Open Playlist</a></iframe>
-	<!--</div>-->
+<body onload="if (window.innerWidth < 850) alert('Drag left for the playlist.');">
+	<div id="wrapper">
+		<div id="left">
+			<iframe id="soundboard" src="soundboard.php"><a href="soundboard.php">Open Soundboard</a></iframe>
+			<iframe id="festify" src="http://festify.us/554a9791757e65242d72f15e"><a href="http://festify.us/554a9791757e65242d72f15e">Open Playlist</a></iframe>
+		</div>
+	</div>
 </body>
 </html>
