Android 2.x compatibility, PNG graphics
Workaround for WebKit 533.x not supporting SVG;
PNG graphics of the newer SVGs

--- a/httpdocs/soundboard.htm
+++ b/httpdocs/soundboard.htm
@@ -83,7 +83,7 @@
 		</form>
 	</div>
 	<div id="navbar">
-		<div id="title" onclick="location.href='disclaimer.htm'">Soundboard</div>
+		<div id="title" onclick="location.href='disclaimer.php'">Soundboard</div>
 		<div id="buttons"><img id="switch" title="Local/Remote Playback" onclick="remoteSwitch()" src="images/switch-off.svg" alt=""><img title="Record" onclick="upload()" src="images/record.svg" alt=""><img title="Refresh" onclick="refresh()" src="images/refresh.svg" alt=""></div>
 	</div>
 </body>
