- Add button for admin mode on Safari (doesn't support long-press) - Add Cancel button in recording form - Allow using Back button (browser history) from Credits to return to soundboard - Disable playlist button if partyUrl is empty - Use audio.onended instead of timeout for local playback UI feedback - Properly deduce filename extension from mimetype - Use fetch() where possible - Use soundboard.js in index.htm - Refactoring

--- a/httpdocs/credits.htm
+++ b/httpdocs/credits.htm
@@ -26,4 +26,6 @@
 	<h2>Soundboard Speaker Client</h2>
 	<p><a href="soundboard-client.exe">Speaker client</a> by <a href="https://codeberg.org/ltguillaume">ltguillaume</a> (AGPLv3)</p>
 </div>
-<div id="creditsbtn" onclick="refresh();window.scroll(0,0);">Back</div>
+<div id="bottomnav">
+	<div onclick="history.back()">Terug</div>
+</div>
