--- a/httpdocs/soundboard.htm
+++ b/httpdocs/soundboard.htm
@@ -9,12 +9,15 @@
 <body>
 	<div id="navbar">
 		<div id="title" onclick="refresh()" oncontextmenu="adminSwitch(event)">Soundboard</div>
-		<div id="buttons"><img id="output" class="hide" title="Local/remote Playback" onclick="outputSwitch()" src="images/switch-on.svg" alt=""><img title="Record" onclick="showForm()" src="images/record.svg" alt=""><img title="Refresh" onclick="refresh()" src="images/refresh.svg" alt=""></div>
-		<div id="outputmsg" class="hide"><img src="images/switch-on.svg" height="12px"> Play soundbites over the party speakers</div>
+		<div id="buttons"><img id="output" class="hidden" title="Local/remote Playback" onclick="outputSwitch()" src="images/switch-on.svg" alt=""><img title="Record" onclick="recordSwitch()" src="images/record.svg" alt=""><img title="Refresh" onclick="refresh()" src="images/refresh.svg" alt=""></div>
+		<div id="outputmsg" class="hidden"><img src="images/switch-on.svg" height="12px"> Play soundbites over the party speakers</div>
 	</div>
 	<div id="contents">
 		{contents}
-		<div id="disclaimer" onclick="disclaimer()">Disclaimer</div>
+		<div id="bottomnav">
+			<div id="adminbtn" class="hidden" onclick="adminSwitch()">Manage sounds</div>
+			<div onclick="location.search = 'credits'">Credits</div>
+		</div>
 	</div>
 	<div id="form">
 		<h3>Record a message</h3>
@@ -29,6 +32,7 @@
 			Title
 			<input type="text" name="desc" autocapitalize="sentence"><!--onfocus="document.getElementsByName('desc')[0].scrollIntoView(0)" -->
 			<br><br>
+			<input type="button" value="Cancel" onclick="recordSwitch()">
 			<input type="submit" value="Send">
 		</form>
 	</div>
